2005-04-27  Mengjie Yu  <meng-jie.yu@sun.com>

	* e-config.c: (e_config_create_window):
	We should set the title of the window.

	Fixes #300477

2005-03-14  Not Zed  <NotZed@Ximian.com>

	** See bug #73550 (related for config pages)

	* e-config.c (ech_config_widget_factory): if we are disabled, then
	noop.
	(ech_config_factory, ech_commit, ech_abort): same.

2005-03-01  Not Zed  <NotZed@Ximian.com>

	* *.c: Remove/disable debug.

2005-02-23  Hans Petter Jansson  <hpj@novell.com>

	* Makefile.am (eutilinclude_HEADERS)
	(libeutil_la_SOURCES): Remove e-passwords from here, it now
	lives in libedataserverui.

	* e-passwords.[ch]: Removed.

2005-02-10  Not Zed  <NotZed@Ximian.com>

	** See bug #61363 & mail/ChangeLog

	* e-config.c (ec_rebuild): work properly if the page factory
	returns NULL, so the code can selectivly turn off pages.
	(ec_druid_next, ec_druid_prev): skip non-created pages.

	* e-config.c (ec_rebuild): re-order notebook child properly.
	Connect to destroy events so we update the widget-node widget
	pointer properly for linked ui reconfigures.

2005-02-17  Not Zed  <NotZed@Ximian.com>

	* e-popup.c (ep_prune_tree, ep_build_tree, e_popup_create_menu):
	completely rewritten.  Simpler and more robust.

2005-02-16  Not Zed  <NotZed@Ximian.com>

	* e-popup.c (e_popup_create_menu): do the visibility mask test
	before sorting.  don't perform it on bar's or submenu's anymore,
	calculate when not to show/create them.

2005-02-14  Rodney Dawes  <dobey@novell.com>

	* e-menu.c (emph_construct): If the plug-in is not enabled, do nothing

2005-02-07  Not Zed  <NotZed@Ximian.com>

	* e-popup.c (emph_construct_menu):
	* e-menu.c (emph_construct_menu):
	* e-config.c (emph_construct_menu): Don't let the 'id' field,
	which identifies the target menu/whatever, to be NULL, otherwise
	it gets added to all.

2005-02-04  Rodney Dawes  <dobey@novell.com>

	* e-passwords.c (ep_ask_password): Set the border widths for the
	dialog containers to be HIG compliant